force-app/main/default/objects/custom_create182__c/custom_create182__c.object-meta.xml
<CustomObject>
    <label>Custom created object182</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects182</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>