force-app/main/default/objects/custom_create182__c/fields/custom_create_182field545__c.field-meta.xml
<CustomField>
    <fullName>custom_create_182field545__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 182field545</label>
    <type>Checkbox</type>
</CustomField>