force-app/main/default/objects/custom_create182__c/fields/custom_create_182field550__c.field-meta.xml
<CustomField>
    <fullName>custom_create_182field550__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 182field550</label>
    <type>Checkbox</type>
</CustomField>